<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Tentang Kreator"
            android:textAlignment="center"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="300dp">>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@drawable/yellobackground"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/imageView5"
                                android:layout_width="wrap_content"
                                android:layout_height="100dp"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="40dp"
                                app:srcCompat="@drawable/me" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/creatorname"
                            android:textAlignment="center"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/creatorstudi"
                            android:textAlignment="center" />

                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/creatorabout"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="Follow akun saya"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/instagram"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/instagram"

                        android:clickable="true"
                        android:orientation="horizontal">

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:text="rafaelindra.id" />

                    <LinearLayout
                        android:id="@+id/whatapps"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:background="@drawable/whatsapp"
                        android:clickable="true"
                        android:onClick="whatsapp"
                        android:orientation="vertical"></LinearLayout>


                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Tentang Aplikasi"
            android:textAlignment="center"
            android:textStyle="bold"
            android:typeface="normal" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:srcCompat="@drawable/logoheader" />

        <TextView
            android:id="@+id/aboutdef"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:text="@string/aboutdanisi"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/aboutapps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/devbackground"
            android:padding="20dp"
            android:text="@string/aboutapps"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>


</RelativeLayout>