<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context="com.example.dasini.Mainmenu_activity">


    <LinearLayout
        android:id="@+id/headbg"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:background="@drawable/tari_4"
        android:orientation="horizontal" >

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:onClick="home"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView19"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:text="DANISI"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:typeface="sans" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:orientation="vertical" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/devbackgroundlight"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_margin="20dp"
                    android:background="@drawable/devbackgroundyellow"
                    android:clickable="true"
                    android:onClick="tari4"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/title_tari4"
                        android:textColor="@color/white"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView18"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/asal_tari4"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/published"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="Published At: 2022-07-10 10:14:00"
                        android:textSize="10sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="20dp"
                    android:background="@drawable/listbackground"
                    android:clickable="true"
                    android:onClick="tari4"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"

                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:text="@string/desc_tari4" />


                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="Menu lainnya"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:gravity="center_vertical"
                        android:layout_width="200dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/devbackgroundyellow"
                        android:clickable="true"
                        android:onClick="tontontari4"
                        android:orientation="vertical"
                        tools:ignore="OnClick">

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Tonton Video"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>


            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</RelativeLayout>




